Added operator class names

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
             <tbody class="tbody">
                 <tr>
-                    <th colspan="4"></th>
+                    <th colspan="4" class="display"></th>
                 </tr>
                 <tr>
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
-                    <td>/</td>
+                    <td class="divide">/</td>
                 </tr>
 
                 <tr>
                     <td>4</td>
                     <td>5</td>
                     <td>3</td>
-                    <td>*</td>
+                    <td class="multiply">*</td>
                 </tr>
 
                 <tr>
                     <td>7</td>
                     <td>8</td>
                     <td>3</td>
-                    <td>+</td>
+                    <td class="add">+</td>
                 </tr>
             </tbody>
 
@@ -47,8 +47,8 @@
                 <tr>
                     <td>0</td>
                     <td>.</td>
-                    <td>=</td>
-                    <td>-</td>
+                    <td class="equal">=</td>
+                    <td class="subtract">-</td>
                 </tr>
             </tfoot>
         </table>
